src/styles/pages/category/product-list.scss
@use 'sass:color';

// PRODUCT LIST

.product-list {
  position: relative;
  padding: 0;
  margin: 0;

  .product-tile {
    position: relative;
    text-align: center;

    .product-image-container {
      min-height: 270px;
    }

    img {
      width: auto;
      padding-bottom: 0;
    }

    .product-variation-container {
      width: 100%;

      .product-variation {
        display: inline-block;
        width: 60%;
        text-align: left;

        @include media-breakpoint-down(md) {
          width: 100%;
        }

        &.read-only {
          text-align: center;
        }

        .form-group {
          margin-bottom: divide($space-default, 3);

          label {
            padding-bottom: 0;
          }
        }
      }
    }
  }

  .product-tile-list {
    .product-image-container {
      min-height: 120px;
    }

    a {
      &.product-title {
        padding-top: 0;
        text-align: left;
      }
    }

    .product-tile-actions {
      position: relative;

      .btn {
        padding: 0 12px 3px 0;
      }
    }

    .product-variation-container {
      width: 100%;

      .product-variation {
        display: inline-block;
        width: 100%;
        text-align: right;

        @include media-breakpoint-down(md) {
          text-align: left;
        }

        .form-group {
          margin-right: 0;
          margin-bottom: $space-default * 0.5;
          margin-left: 0;

          label {
            width: 100%;
            padding-top: 0;
            padding-bottom: 0;
            text-align: left;
          }
        }
      }
    }
  }

  .product-list-item {
    position: relative;
    min-height: 100px;
    padding-right: $space-default;
    padding-bottom: ($space-default * 2);
    padding-left: $space-default;
    outline: none;
    list-style-type: none;

    &.grid-view {
      &:nth-child(2n + 1) {
        clear: both;
      }

      @media (min-width: $screen-md-min) {
        &:nth-child(2n + 1) {
          clear: none;
        }

        &:nth-child(3n + 1) {
          clear: both;
        }
      }
    }

    &.list-view {
      a {
        &.product-title {
          margin-top: 0;
        }
      }

      .product-tile-actions {
        justify-content: flex-start;
      }
    }
  }

  a {
    &.product-title {
      display: block;
      padding-top: 0;
      margin-top: $space-default;
      font-family: $font-family-condensedregular;
      font-size: $font-size-lg;
      color: $text-color-primary;
      text-align: center;
    }
  }

  .product-tile-actions {
    position: absolute;
    top: 0;
    right: 0;
    display: flex;
    justify-content: flex-end;
    width: 100%;
    background-color: $white;

    .btn,
    a {
      padding: 3px 6px;
      font-size: 1.3rem;

      @media (hover: none) {
        padding-bottom: 0;
        margin-bottom: 0;
      }
    }

    .add-to-cart,
    .add-to-wishlist,
    .add-to-compare {
      margin-right: 0;

      &.is-selected {
        color: var(--bs-secondary-color);
      }
    }
  }

  .product-list-loading {
    position: absolute;
    top: 0;
    left: 50%;
    z-index: 1;
    transform: translateX(-50%);
  }
}

.scaled-prices {
  margin-bottom: $space-default;
  font-family: $font-family-condensedregular;
  color: $text-color-tertiary;
}

.product-list-container {
  @include clearfix();

  padding-bottom: ($space-default * 2);

  a.view-all {
    clear: both;
    display: block;
  }
}

/* product tile effects */
.product-tile {
  .product-image {
    transition: transform 0.2s ease-in-out;
  }

  .product-tile-actions {
    opacity: 0;
    transition: opacity 0.5s ease-in-out;

    @media (hover: none) {
      opacity: 0.85;
    }

    @media (-moz-touch-enabled) {
      opacity: 0.85;
    }
  }

  &:hover {
    .product-tile-actions {
      opacity: 0.85;
    }

    .product-image {
      transform: scale(1.1);
    }
  }
}

.product-variation {
  &.read-only {
    label,
    .product-variation-info {
      padding-right: divide($space-default, 3);
      margin-bottom: 0;

      &.span-separator::after {
        content: ':';
      }
    }

    &:last-of-type {
      margin-bottom: divide($space-default * 2, 3);
    }
  }
}

.product-list-actions-container {
  .action-container {
    margin-top: $space-default * 0.5;
  }

  .product-quantity .form-group {
    @include media-breakpoint-down(xl) {
      margin-bottom: 0;
    }
  }

  .addtocart-container {
    @include media-breakpoint-up(lg) {
      padding-left: 0;
    }

    .add-to-cart button {
      width: 100%;
    }
  }
}

